# oci_gen_ai_tool_decorators

./: .gitignore  README.md  pyproject.toml
src/: gen_ai_tool_decorators.py
src/gen_ai_tool_decorators/: __init__.py  gen_ai_tool_decorators.py
test/: testgen_ai_decorators.py
